@@ -1,5 +1,5 @@
 /* makeinfo -- convert Texinfo source into other formats.
-   $Id: makeinfo.c,v 1.45 2003-11-17 21:27:29 dirt Exp $
+   $Id: makeinfo.c,v 1.46 2003-11-18 19:47:58 dirt Exp $
 
    Copyright (C) 1987, 1992, 1993, 1994, 1995, 1996, 1997, 1998, 1999,
    2000, 2001, 2002, 2003 Free Software Foundation, Inc.
@@ -4225,7 +4225,9 @@ execute_string (format, va_alist)
 #ifdef VA_FPRINTF
   va_list ap;
 #endif
+  extern int xml_in_para;
   int xml_element_stack_start;
+  int xml_para_at_start = xml_in_para;
 
   es = get_execution_string (EXECUTE_STRING_MAX);
   temp_string = es->string;
@@ -4255,7 +4257,7 @@ execute_string (format, va_alist)
     {
       while (xml_current_stack_index () > xml_element_stack_start)
         xml_end_current_element ();
-      if (xml_in_copying)
+      if (!xml_para_at_start)
         xml_end_para ();
     }
 
